--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <h1>Abdulhakim Maha</h1>
       <hr />
-      <img  class="photo" src="/lulu.jpg" alt="" />
+      <img  class="photo" src="https://avatars.githubusercontent.com/u/69455513?v=4" alt="" />
     </div>
   </body>
 </html>
